XMLtoCSV/objects/unpackaged/objects/Time_Off_Territory_vod__c.object
<CustomObject>
    <description>Time Off Territory data</description>
    <fields>
        <fullName>Date_vod__c</fullName>
        <description>Starting date requested for time off.</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_off_vod__c</fullName>
        <label>Hours off</label>
        <picklist>
            <controllingField>Time_vod__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hours_vod__c</fullName>
        <description>Formula to calculate the # of hours based on the Time picklist</description>
        <formula>IF(ISPICKVAL(Time_vod__c, &quot;AM Off&quot;), 4, 
  IF(ISPICKVAL(Time_vod__c, &quot;PM Off&quot;), 4, 
   IF(ISPICKVAL(Time_vod__c, &quot;All day&quot;), 8,
     IF(ISPICKVAL(Time_vod__c, &quot;2 Days&quot;), 16,
       IF(ISPICKVAL(Time_vod__c, &quot;3 Days&quot;), 24,
          IF(ISPICKVAL(Time_vod__c, &quot;4 Days&quot;), 32,
             IF(ISPICKVAL(Time_vod__c, &quot;5 Days&quot;), 40, 
                 IF(ISPICKVAL(Time_vod__c, &quot;Hourly&quot;),  VALUE(TEXT(Hours_off_vod__c))   ,0)
              )
          )
       )
    )
   )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>The Mobile ID field allows for the creation of TOT records from VMobile.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reason_vod__c</fullName>
        <description>Picklist of available reason codes for time off</description>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jury Duty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bereavement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inclement Weather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Time_vod__c</fullName>
        <label>Start Time</label>
        <picklist>
            <controllingField>Time_vod__c</controllingField>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Picklist of available statuses.  This field is used in the approval process workflow.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>Territory of User that creates the Time Off Territory request.  This field is populated via a Trigger on Time Off Territory.</description>
        <label>Territories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_vod__c</fullName>
        <description>Picklist of available time frames for time off.  (AM, PM, 2 days, etc.) This field drives the # hours calculated in the Hours field.</description>
        <label>Time</label>
        <picklist>
            <picklistValues>
                <fullName>AM Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Time Off Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_vod__c</columns>
        <columns>Reason_vod__c</columns>
        <columns>Status_vod__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TOT-{0000}</displayFormat>
        <label>TOT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Off Territory</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>